# C_Board_Framework

./: .gitignore  .mxproject  CMakeLists.txt  C_Board_Framework.ioc  STM32F407XX_FLASH.ld
Core/Inc/: main.h  stm32f4xx_it.h  tim.h
Core/Src/: can.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
Drivers/CMSIS/DSP/ComputeLibrary/Include/: NEMath.h
User/Algorithm/Filter/: VQF_filter.c  mahony_filter.c
User/Algorithm/Kinematics/: Chassis_Calc.c  Chassis_Calc.h
User/App/1_Catapult_Hero/: CMakeLists.txt
User/App/1_Catapult_Hero/All_Task/: All_Task.c
User/App/1_Catapult_Hero/Chassis_Task/: Chassis_Ctrl.c
User/App/1_Catapult_Hero/IMU_Task/: IMU_Task.c
User/App/1_Catapult_Hero/System_Init/: Robot_Config.c  System_Init.c
User/App/3_Mecanum_Infanty/All_Task/: All_Task.c
User/App/3_Mecanum_Infanty/Chassis_Task/: Chassis_Ctrl.c  Chassis_Ctrl.h
User/App/3_Mecanum_Infanty/Command/: Robot_Cmd.c  Robot_Cmd.h
User/App/3_Mecanum_Infanty/System_Init/: Robot_Config.c  System_Init.c  System_Init.h
User/App/3_Mecanum_Infanty_Chassis/All_Task/: All_Task.c
User/App/3_Mecanum_Infanty_Chassis/Chassis_Task/: Chassis_Ctrl.c  Chassis_Ctrl.h
User/App/3_Mecanum_Infanty_Chassis/Command/: Robot_Cmd.c  Robot_Cmd.h
User/App/3_Mecanum_Infanty_Chassis/System_Init/: Robot_Config.c  Robot_Config.h  System_Init.c
User/App/3_Mecanum_Infanty_Gimbal/All_Task/: All_Task.c
User/App/3_Mecanum_Infanty_Gimbal/Command/: Robot_Cmd.c  Robot_Cmd.h
User/App/3_Mecanum_Infanty_Gimbal/Gimbal_Task/: Gimbal_Ctrl.c  Gimbal_Ctrl.h
User/App/3_Mecanum_Infanty_Gimbal/IMU_Task/: IMU_Task.c
User/App/3_Mecanum_Infanty_Gimbal/Shoot_Task/: Shoot_Ctrl.c  Shoot_Ctrl.h
User/App/3_Mecanum_Infanty_Gimbal/System_Init/: Robot_Config.c  Robot_Config.h  System_Init.c
User/App/All_Task/: All_Task.c
User/App/IMU_Task/: IMU_Task.c
User/App/System_Init/: System_Init.c
User/BSP/CAN/: BSP_CAN.c  BSP_CAN.h
User/BSP/DWT/: BSP_DWT.h
User/BSP/FDCAN/: BSP_CAN.c  BSP_CAN.h
User/BSP/SPI/: BSP_SPI.c  BSP_SPI.h
User/BSP/TIM/: BSP_TIM.h
User/BSP/UART/: BSP_UART.c  BSP_UART.h
User/Device/Host_Comm/: Aim_Vision.c  Aim_Vision.h  Vofa.c  Vofa.h
User/Device/IMU/: BMI088.c  BMI088Middleware.c
User/Device/Indicator/: Buzzer.c  LED.c  LED.h
User/Device/Motor/: BM_Motor.c  BM_Motor.h  DJI_Motor.c  DJI_Motor.h  DM_Motor.c  DM_Motor.h  LK_Motor.c  LK_Motor.h
User/Device/Power/: Power_CAP.c  Power_CAP.h
User/Device/Referee/: Referee.h
User/Device/Remote/: DBUS.c  VT13.c
User/System/Communication/: Comm_DualBoard.c  Comm_DualBoard.h  Message_Center.c
User/System/Feedback/: System_Indicator.c
User/System/State/: System_State.c
User/Utils/Inc/: All_define.h  Horizon_MATH.h  Offline_Detector.h  Vofa.h  user_lib.h
User/Utils/Src/: Horizon_MATH.c  Offline_Detector.c  Vofa.c
